syntax = "proto3";

package grpc;

option go_package = "github.com/direktiv/direktiv/pkg/secrets/grpc";

import "google/protobuf/empty.proto";

import "pkg/secrets/grpc/secrets.proto";

service SecretsService {
  rpc StoreSecret(SecretsStoreRequest) returns (google.protobuf.Empty)  {}
  rpc RetrieveSecret(SecretsRetrieveRequest) returns (SecretsRetrieveResponse)  {}
  rpc DeleteSecret(SecretsDeleteRequest) returns  (google.protobuf.Empty)  {}
  rpc DeleteSecrets(DeleteSecretsRequest) returns  (google.protobuf.Empty)  {}
  rpc GetSecrets(GetSecretsRequest) returns (GetSecretsResponse)  {}
}
